--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="browse_all_records">Browse all records</string>
     <string name="user_name">Vu Hoang Thai Duong</string>
     <string name="follow_us">Follow us:</string>
+    <string name="hint_sentence">Sentence...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Word not saved because it is empty.</string>
 </resources>
